--- a/server/index-node/assets/index.html
+++ b/server/index-node/assets/index.html
@@ -42,8 +42,8 @@
              copy them directly into your environment, or perhaps include them in your
              favored resource bundler.
            -->
-        <link rel="stylesheet" href="/graphiql.css" />
-        <script src="/graphiql.min.js"></script>
+        <link rel="stylesheet" href="graphiql.css" />
+        <script src="graphiql.min.js"></script>
 
     </head>
     <body>
