fix(graphql): add crossorigin prop

--- a/server/http/assets/index.html
+++ b/server/http/assets/index.html
@@ -12,7 +12,7 @@
       rel="icon"
       type="image/png"
       href="https://storage.googleapis.com/graph-web/favicon.png"
-      crossorigin
+      crossorigin="anonymous"
     />
   </head>
   <body id="body" class="no-focus-outline">
@@ -31,6 +31,7 @@
         title: "The GraphiQL",
         logo: React.createElement("img", {
           src: "https://storage.googleapis.com/graph-web/favicon.png",
+          crossOrigin: "anonymous",
           style: {
             height: "42px",
           },
